--- a/static/css/comments.css
+++ b/static/css/comments.css
@@ -1,3 +1,9 @@
+#comments {
+    margin-top:18px;
+    padding-top: 18px;
+    border-top: 1px dotted #ccc;
+}
+
 /* ---------------------------------------------------------------------------------------------------------------------
 Comment form Comment form Comment form Comment form Comment form Comment form Comment form Comment form Comment form
 --------------------------------------------------------------------------------------------------------------------- */
@@ -15,6 +21,7 @@ Comment form Comment form Comment form Comment form Comment form Comment form Co
     padding: 6px;
     width: 117px;
     margin-right: 9px;
+    *margin-right: 7px; /*hack because ie7 doesn't support label[for='id_message_type_2']*/
     border: 1px solid #006499;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
