--- a/static/css/forms.css
+++ b/static/css/forms.css
@@ -1,6 +1,3 @@
-#form_6c {
-    /*padding: 9px;*/
-}
 .form_6c h1 {
     font-family:"MuseoSlab700", Tahoma, sans-serif;
     color: #103665;
@@ -32,9 +29,11 @@
 
 .form_6c label {
     display: block;
+    margin-bottom: 2px;
     color: #103665;
     font-weight: bold; }
 .form_6c .form_help_text {
+    margin-top: 6px;
     font-size: 12px;
     color: #666666;
     line-height: 16px;
@@ -134,6 +133,34 @@
 }
 
 
+/*Variation on form_6c with a dark blue background. Used for petition sign up*/
+.form_6c_dark {
+    background: #0F3669;
+    padding: 32px 42px;
+    -webkit-border-radius: 0px;
+    -moz-border-radius: 0px;
+    border-radius: 0px;
+}
+.form_6c_dark .form_row label, .form_6c_dark .form_help_text {
+    color: #FFF;
+}
+.form_6c_dark .form_row input[type=text], 
+.form_6c_dark .form_row input[type=password],
+.form_6c_dark .form_row textarea {
+    width: 356px;
+}
+.form_6c_dark .form_buttons {
+    border-top: 0;
+    padding-top: 0;
+    margin-top: 9px;
+}
+.form_6c_dark .form_row_half input[type=text], 
+.form_6c_dark .form_row_half input[type=password] {
+    width: 164px;
+}
+
+
+
 /* ---------------------------------------------------------------------------------------------------------------------
 Button Button Button Button Button Button Button Button Button Button Button Button Button Button Button Button Button 
 --------------------------------------------------------------------------------------------------------------------- */
@@ -166,6 +193,7 @@ Button Button Button Button Button Button Button Button Button Button Button But
     -webkit-box-align: center;
     -webkit-appearance: none;
     -webkit-user-select: none;
+    position: relative;
 }
 button::-moz-focus-inner, input::-moz-focus-inner  { border: 0; padding:0; }
 
@@ -185,18 +213,18 @@ button::-moz-focus-inner, input::-moz-focus-inner  { border: 0; padding:0; }
 
 .button_mega {
     font-size: 26px !important;
-    padding: 6px 24px !important;
+    padding: 6px 24px;
     line-height: 32px !important;
 }
 .button_large {
     font-size: 16px !important;
-    padding: 9px 14px !important;
+    padding: 9px 14px;
     line-height: 21px !important;
 }
 
 .button_small {
     font-size: 14px !important;
-    padding: 3px 12px !important;
+    padding: 3px 12px ;
     line-height: 18px !important;
 }
 
@@ -254,6 +282,31 @@ button::-moz-focus-inner, input::-moz-focus-inner  { border: 0; padding:0; }
 .button_green:active, input.button_green:active  {
     background: #53D100;
 }
+
+.button_feed, input.button_feed {
+    padding-left: 4px !important; 
+    padding-right: 6px !important; 
+    float: right;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #333;
+    text-shadow: none;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    border-radius: 2px;
+    border: 1px solid #999999;
+    background: #E6E6E6; 
+    background: -moz-linear-gradient(top, #FFFFFF 0%, #E6E6E6 40%, #E6E6E6 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#FFFFFF), color-stop(40%,#E6E6E6), color-stop(100%,#E6E6E6));
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#FFFFFF', endColorstr='#E6E6E6',GradientType=0 );
+}
+.button_feed:hover, input.button_feed:hover  {
+    background: #E6E6E6;
+}
+.button_feed:active, input.button_feed:active  {
+    background: #E6E6E6;
+    color: #333;
+}
+
 
 .button_189 { width: 189px; }
 
