Completed challenges browse page. Autofill petition for logged in users.

--- a/challenges/templates/challenges/_nugget_list.html
+++ b/challenges/templates/challenges/_nugget_list.html
@@ -1,10 +1,7 @@
-<ul class='plain_list'>
-    {% for challenge in challenges %}
-        <li>
-            <p>
-                <a href="{% url challenges_detail challenge.id %}">{{ challenge.title }}</a>
-                <span class='smaller'>{{ challenge.status }}</span>
-            </p>
-        </li>
-    {% endfor %}
-</ul>
+<div class="progress_wrapper">
+    <div class="progress_bar" style="width:{{progress}}%;"></div>
+    <div class="progress_text">
+        {{challenge.number_of_supporters|intcomma}}
+        <div>of {{challenge.goal|intcomma}}</div>
+    </div>
+</div>
