--- a/events/templates/events/show.html
+++ b/events/templates/events/show.html
@@ -30,7 +30,7 @@ host your own.
             We have all the <a href="/hosting/">materials</a> you need to host an energy meet up. 
             <!--Check them out or start creating your event right away.-->
         </p>
-        <a href="{% url event-create %}" class="button">Create an Event</a>
+        <a href="{% url event-create %}" class="button"><b>+</b> Create an Event</a>
     </div>
 </div>
 <div id="events_search">
