--- a/groups/templates/groups/group_list.html
+++ b/groups/templates/groups/group_list.html
@@ -10,7 +10,7 @@ or local group become more energy savvy. As a community leader, you can use
 your community to organize meetings, encourage action, and track progress
 towards your community's goals.
 <br/><br/>
-<a class="button" href="{% url group_create %}">Start a Community</a>
+<a class="button" href="{% url group_create %}"><b>+</b> Start a Community</a>
 {% endblock %}
 {% block ribbon_bar %}Showing {{groups|length}} communities{% endblock %}
 
